# apm32e103-kit

./: .gitignore  README.md
firmware/apm32e103-kit-boot/: CMakeLists.txt
firmware/apm32e103-kit-boot/prj/vscode/: apm32e103-kit-boot.code-workspace
firmware/apm32e103-kit-boot/src/ap/: ap.c
firmware/apm32e103-kit-boot/src/ap/modules/: modules.h
firmware/apm32e103-kit-boot/src/bsp/: bsp.c  bsp.h
firmware/apm32e103-kit-boot/src/bsp/ldscript/: APM32E103RE_BOOT.ld
firmware/apm32e103-kit-boot/src/common/: err_code.h
firmware/apm32e103-kit-boot/src/common/core/: util.c
firmware/apm32e103-kit-boot/src/hw/: hw.c  hw.h  hw_def.h
firmware/apm32e103-kit-boot/src/hw/driver/: button.c  flash.c  lcd.c  loader.c  rtc.c  spi_flash.c  ws2812.c
firmware/apm32e103-kit-fw/: CMakeLists.txt
firmware/apm32e103-kit-fw/src/ap/: ap.c
firmware/apm32e103-kit-fw/src/ap/modules/: modules.h
firmware/apm32e103-kit-fw/src/bsp/: bsp.c  bsp.h
firmware/apm32e103-kit-fw/src/bsp/device/: system_apm32e10x.c
firmware/apm32e103-kit-fw/src/bsp/ldscript/: APM32E103RE_FLASH.ld
firmware/apm32e103-kit-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/apm32e103-kit-fw/src/hw/driver/: button.c  eeprom.c  gpio.c  i2c.c  imu.c  reset.c  rtc.c  sd.c  spi.c  uart.c  ws2812.c
firmware/apm32e103-kit-fw/tools/mac/: firm-update
firmware/exam/EX-01-LED/src/ap/: ap.c
firmware/exam/EX-01-LED/src/bsp/: bsp.h
firmware/exam/EX-01-LED/src/hw/: hw_def.h
firmware/exam/EX-02-UART/: CMakeLists.txt
firmware/exam/EX-02-UART/src/ap/: ap.c
firmware/exam/EX-02-UART/src/bsp/: bsp.h
firmware/exam/EX-02-UART/src/hw/: hw.c  hw_def.h
firmware/exam/EX-03-CLI/src/hw/: hw.c  hw_def.h
firmware/exam/EX-04-BUTTON/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-05-GPIO/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-06-I2C-EEPROM/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-07-SPI-FLASH/src/bsp/: bsp.h
firmware/exam/EX-07-SPI-FLASH/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-09-SD/src/ap/: ap.c
firmware/exam/EX-09-SD/src/bsp/: bsp.h
firmware/exam/EX-09-SD/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-10-I2S/: CMakeLists.txt
firmware/exam/EX-10-I2S/src/bsp/: bsp.c  bsp.h
firmware/exam/EX-10-I2S/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-11-USB-CDC/src/hw/: hw.c  hw_def.h
firmware/exam/EX-12-CAN/src/ap/: ap.c
firmware/exam/EX-12-CAN/src/bsp/: bsp.h
firmware/exam/EX-12-CAN/src/hw/: hw.c
firmware/exam/EX-14-OLED/: CMakeLists.txt
firmware/exam/EX-14-OLED/src/ap/: ap.c
firmware/exam/EX-14-OLED/src/bsp/device/: syscalls.c
firmware/exam/EX-14-OLED/src/hw/: hw.c  hw.h  hw_def.h
firmware/exam/EX-14-OLED/src/hw/driver/: i2c.c
firmware/exam/EX-15-WIZnet-W5500/: CMakeLists.txt
firmware/exam/EX-18-ADC/src/ap/: ap.c
software/firm-update/: CMakeLists.txt  README.md
software/firm-update-gui/: firm-update-gui.py  requirements.txt
software/firm-update-gui/lib/: cmd.py  cmd_boot.py  down_firm.py
software/firm-update-gui/ui/: ui_main.py  ui_main.ui
software/firm-update/src/ap/: ap.cpp
(+98 files in other folders)
